# rmus

./: Cargo.toml  README.md  rustfmt.toml
src/: constants.rs  main.rs
