[package]
name                = "rsmus"
version             = "0.0.1-alpha"
authors             = ["Kamran Mackey <kamranm1200@gmail.com>"]
edition             = "2018"

[dependencies]
clap                = "2.33.3"
claxon              = "0.4.3"
cursive             = { version = "0.15.0", default-features = false, features = ["crossterm-backend"] }
rodio               = "0.13.0"
